Attempt to correct vertical align of banner-caption on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -146,9 +146,9 @@ p span{
 }
 .banner-caption {
     position:absolute;
-    top: 50%;
+    bottom: 50%;
     width: 100%;
-    transform: translateY(-50%);
+    transform: translateY(50%);
     z-index: 2;
 }
 
